enterprise-platform/k8s/production/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexuscore-ingress
  labels:
    name: nexuscore-ingress
    security.kubernetes.io/enforce: privileged
---
apiVersion: v1
kind: Namespace
metadata:
  name: nexuscore-prod
  labels:
    name: nexuscore-prod
    security.kubernetes.io/enforce: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: nexuscore-data
  labels:
    name: nexuscore-data
    security.kubernetes.io/enforce: restricted
