enterprise-platform/k8s/production/06b-daemonsets.yaml
# ---------------------------------------------------------------------------
# FLUENT-BIT LOGGING EXPORTER DAEMONSET
# ---------------------------------------------------------------------------
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: fluent-bit
  namespace: nexuscore-data
  labels:
    app: fluent-bit
spec:
  selector:
    matchLabels:
      app: fluent-bit
  template:
    metadata:
      labels:
        app: fluent-bit
    spec:
      priorityClassName: nexuscore-critical
      serviceAccountName: database-sa
      containers:
      - name: fluent-bit
        image: fluent/fluent-bit:2.1.4
        securityContext:
          runAsNonRoot: false # Logging daemon needs root host system read permissions
          readOnlyRootFilesystem: false
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
        volumeMounts:
        - name: varlog
          mountPath: /var/log
        - name: varlibdockercontainers
          mountPath: /var/lib/docker/containers
          readOnly: true
      terminationGracePeriodSeconds: 10
      volumes:
      - name: varlog
        hostPath:
          path: /var/log
      - name: varlibdockercontainers
        hostPath:
          path: /var/lib/docker/containers
